syntax = "proto3";


package GrpcExample.Services;

// TodoService
service TodoService {
    rpc Create(Todo) returns (Todo) {}
    rpc Update(Todo) returns (Todo) {}
    rpc Get(TodoRequest) returns (Todo) {}
    rpc Delete(DeleteRequest) returns (Empty) {}
    rpc List(Empty) returns (Todos) {}
}

// Every Service needs a message and this is an empty message
message Empty {}

message TodoRequest {
    int32 id = 1;
}

message Todo {
    int32 id = 1;
    string text = 2;
    bool done = 3;
}

message Todos {
    repeated Todo todos = 1;
}

message DeleteRequest {
    int32 id = 1;
}
